[package]
name = "kmf"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
async_zip = { version = "0.0.17", features = ["full"] }
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
directories = "6.0.0"
fancy-regex = "0.14.0"
futures = { version = "0.3.31", features = ["io-compat"] }
futures-lite = "2.6.0"
headers = "0.4.0"
http = "1.3.1"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["stream"] }
reqwest-middleware = "0.4.2"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
temp-dir = "0.1.14"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["tracing", "full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
